--- a/miniwind.css
+++ b/miniwind.css
@@ -2,6 +2,142 @@
   float: right
 }
 
+.m-0 {
+  margin: 0px
+}
+
+.m-0\.5 {
+  margin: 0.125rem
+}
+
+.m-1 {
+  margin: 0.25rem
+}
+
+.m-1\.5 {
+  margin: 0.375rem
+}
+
+.m-10 {
+  margin: 2.5rem
+}
+
+.m-11 {
+  margin: 2.75rem
+}
+
+.m-12 {
+  margin: 3rem
+}
+
+.m-14 {
+  margin: 3.5rem
+}
+
+.m-16 {
+  margin: 4rem
+}
+
+.m-2 {
+  margin: 0.5rem
+}
+
+.m-2\.5 {
+  margin: 0.625rem
+}
+
+.m-20 {
+  margin: 5rem
+}
+
+.m-24 {
+  margin: 6rem
+}
+
+.m-28 {
+  margin: 7rem
+}
+
+.m-3 {
+  margin: 0.75rem
+}
+
+.m-3\.5 {
+  margin: 0.875rem
+}
+
+.m-32 {
+  margin: 8rem
+}
+
+.m-36 {
+  margin: 9rem
+}
+
+.m-4 {
+  margin: 1rem
+}
+
+.m-40 {
+  margin: 10rem
+}
+
+.m-44 {
+  margin: 11rem
+}
+
+.m-48 {
+  margin: 12rem
+}
+
+.m-5 {
+  margin: 1.25rem
+}
+
+.m-52 {
+  margin: 13rem
+}
+
+.m-56 {
+  margin: 14rem
+}
+
+.m-6 {
+  margin: 1.5rem
+}
+
+.m-60 {
+  margin: 15rem
+}
+
+.m-64 {
+  margin: 16rem
+}
+
+.m-7 {
+  margin: 1.75rem
+}
+
+.m-72 {
+  margin: 18rem
+}
+
+.m-8 {
+  margin: 2rem
+}
+
+.m-80 {
+  margin: 20rem
+}
+
+.m-9 {
+  margin: 2.25rem
+}
+
+.m-96 {
+  margin: 24rem
+}
+
 .mx-0 {
   margin-left: 0px;
   margin-right: 0px
@@ -2613,6 +2749,142 @@
 
 .rounded-tr-xl {
   border-top-right-radius: 0.75rem
+}
+
+.p-0 {
+  padding: 0px
+}
+
+.p-0\.5 {
+  padding: 0.125rem
+}
+
+.p-1 {
+  padding: 0.25rem
+}
+
+.p-1\.5 {
+  padding: 0.375rem
+}
+
+.p-10 {
+  padding: 2.5rem
+}
+
+.p-11 {
+  padding: 2.75rem
+}
+
+.p-12 {
+  padding: 3rem
+}
+
+.p-14 {
+  padding: 3.5rem
+}
+
+.p-16 {
+  padding: 4rem
+}
+
+.p-2 {
+  padding: 0.5rem
+}
+
+.p-2\.5 {
+  padding: 0.625rem
+}
+
+.p-20 {
+  padding: 5rem
+}
+
+.p-24 {
+  padding: 6rem
+}
+
+.p-28 {
+  padding: 7rem
+}
+
+.p-3 {
+  padding: 0.75rem
+}
+
+.p-3\.5 {
+  padding: 0.875rem
+}
+
+.p-32 {
+  padding: 8rem
+}
+
+.p-36 {
+  padding: 9rem
+}
+
+.p-4 {
+  padding: 1rem
+}
+
+.p-40 {
+  padding: 10rem
+}
+
+.p-44 {
+  padding: 11rem
+}
+
+.p-48 {
+  padding: 12rem
+}
+
+.p-5 {
+  padding: 1.25rem
+}
+
+.p-52 {
+  padding: 13rem
+}
+
+.p-56 {
+  padding: 14rem
+}
+
+.p-6 {
+  padding: 1.5rem
+}
+
+.p-60 {
+  padding: 15rem
+}
+
+.p-64 {
+  padding: 16rem
+}
+
+.p-7 {
+  padding: 1.75rem
+}
+
+.p-72 {
+  padding: 18rem
+}
+
+.p-8 {
+  padding: 2rem
+}
+
+.p-80 {
+  padding: 20rem
+}
+
+.p-9 {
+  padding: 2.25rem
+}
+
+.p-96 {
+  padding: 24rem
 }
 
 .px-0 {
